<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tests Android</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_card">Cartes</string>
    <string name="hello_you">Salut, toi !</string>
    <string name="how_are_you">Tu vas bien ?</string>
    <string name="open_camera">Ouvrir l\'appareil photo</string>
    <string name="notify">Notifier</string>
    <string name="show_cards">Afficher les cartes</string>
    <string name="photo_preview">Preview de la photo</string>
    <string name="test">Test</string>
    <string name="rate">Sélectionnez une note</string>
    <string name="vibrate">Vibrer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_settings">Préférences</string>
    <string name="title_activity_list">Liste</string>
    <string name="hello_world">Hello world!</string>
    <string name="vue_liste">Vue liste</string>

    <string name="notif_title">Notif…</string>
    <string name="notif_text">Contenu de la notification</string>

    <string name="action_default_text">Texte par défaut</string>
    <string name="action_chooser_title">Envoyer ce texte avec…</string>

</resources>
